# hmpps-trivy-discovery

./: .gitignore  Dockerfile  README.md  dependabot.yml  globals.py  main.py  pyproject.toml  renovate.json  requirements.txt  trivy_discovery-ORIG.py  trivy_discovery.py
.github/: dependabot.yml
.github/actions/cloud-platform-deploy/: action.yml
.github/workflows/: pipeline.yml  security_codeql_actions_scan.yml  security_codeql_python_scan.yml  security_trivy.yml  security_veracode_pipeline_scan.yml  security_veracode_policy_scan.yml
classes/: service_catalogue.py  slack.py  trivy.py
helm_deploy/: values-dev.yaml  values-prod.yaml
helm_deploy/hmpps-trivy-discovery/: Chart.yaml  values.yaml
helm_deploy/hmpps-trivy-discovery/templates/: _discovery_cron_job_envs.tpl  _helpers.tpl  discovery-cron-job.yaml
includes/: trivy.py
processes/: scheduled_jobs.py  trivy_scans.py  update_sc_scheduled_jobs.py
tests/: test_trivy_discovery.py
utilities/: discovery.py  job_log_handling.py
utils/: update_trivy_scan_results.py
